Completion of fix for "Diagram objects moved to inside enclosing package become invisible"

umbrello/umlscene.cpp
- In function createAutoAssociations code handling "object is capable of
  containing nested objects" use new function UMLWidget::isLocatedIn().
  Reason: WidgetBase function rect() always returns x() and y() with
  value 0, which is not right for this context.

BUG: 447661